# mcpCharacterization

./: .cproject  .gitignore  README.md  TAsciiFileReader.cpp  TAsciiFileReader.h  TGainLogFileReader.cpp  TGainLogFileReader.h  TGainSpeAnalyser.cpp  TGainSpeAnalyser.h  TGainSpeReader.cpp  TLeCroyMeasureFileReader.cpp  TLeCroyMeasureFileReader.h  TLeCroyWaveformFileReader.cpp  TLeCroyWaveformFileReader.h  TMeasureStorage.cpp  TMeasureStorage.h  TSingleGainLogLine.cpp  TSingleGainLogLine.h  TSingleLeCroyMeasureLine.cpp  TSingleLeCroyMeasureLine.h  TSingleLeCroyWaveformLine.cpp  TSingleLeCroyWaveformLine.h  cliParams.cpp  makefile  mcpCharacterization.cpp  run.sh
mcpCharacterization/: .project  CMakeLists.txt
mcpCharacterization/inc/: TGainLogFileReader.h  TGainSpeAnalyser.h  TGainSpeReader.h  TLeCroyMeasureFileReader.h  TLeCroyWaveformFileReader.h  helpers.h
mcpCharacterization/scripts/: run.sh
mcpCharacterization/src/: TAsciiFileReader.cpp  TGainLogFileReader.cpp  TGainSpeAnalyser.cpp  TGainSpeReader.cpp  TLeCroyMeasureFileReader.cpp  TLeCroyWaveformFileReader.cpp  TMeasureStorage.cpp  TSingleGainLogLine.cpp  TSingleLeCroyMeasureLine.cpp  TSingleLeCroyWaveformLine.cpp  cliParams.cpp  cliParser.cpp  mcpCharacterization.cpp
